2011-04-01  Jean-Louis Martineau <martineau@zmanda.com>
	* amplot/amplot.awk: Fix for new log format, fix small -t display,
	  fix 'set key' syntax.
	* amplot/amplot.g: Fix 'set data' and 'plot' syntax.

2011-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/taper.pl: Fix installcheck for 'splitting not enabled'.

2011-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/vfs-device.c: LEOM property default to TRUE.

2011-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Log 'splitting not enabled' on write
	  failure.

2011-03-27  Dustin J. Mitchell <dustin@mozilla.com>
	* perl/Amanda/Util.swg: revert previous patch
	* gnulib/Makefile.am gnulib/fsusage.h
	  gnulib/regenerate/fsusage-no-bool.patch gnulib/regenerate/regenerate:
	  patch fsusage.h to not use stdbool
	* device-src/vfs-device.c: don't use 'false' and 'true' (from stdbool)

2011-03-26  Dustin J. Mitchell <dustin@mozilla.com>
	* perl/Amanda/Util.swg: include fsusage.h early in the generated C
	  to avoid problems with SWIG #undefine-ing 'bool' on Mac OS X with
	  the system-installed Perl

2011-03-25  Jan Görig <jgorig@redhat.com>
	* config/amanda/krb5-security.m4: fix linking against wrong libraries
	  on systems where krb5 directory is libdir and amanda is installed

2011-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix iteration over a list it modify.

2011-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: read include_list and pass each line as
	  argument for restore operation.

2011-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Cast with off_t.
	* application-src/amstar.c: Cast with off_t.

2011-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Add ACL property.
	* man/xml-source/amstar.8.xml: Document ACL property.

2011-03-21  Jean-Louis Martineau <martineau@zmanda.com>